--- a/FamilyTree.WebUI/Views/Shared/_ValidationScriptsPartial.cshtml
+++ b/FamilyTree.WebUI/Views/Shared/_ValidationScriptsPartial.cshtml
@@ -1,2 +1,2 @@
-﻿<script src="~/lib/jquery/jquery.validate.min.js"></script>
-<script src="~/lib/jquery/jquery.validate.unobtrusive.min.js"></script>
+﻿@* <script src="~/lib/jquery/jquery.validate.min.js"></script>
+<script src="~/lib/jquery/jquery.validate.unobtrusive.min.js"></script> *@
