--- a/FamilyTree.WebUI/wwwroot/css/LayoutStyle.css
+++ b/FamilyTree.WebUI/wwwroot/css/LayoutStyle.css
@@ -5,12 +5,12 @@
 body {
     margin: 0;
     padding: 0;
-    height: 100%;
+    height: 100vh;
 }
 
 #wrapper {
     height: 100%;
-    /*    min-width: 1200px;*/
+    min-width: 1300px;
     /* max-width: 2048px; */
     min-height: 1080px;
     margin: 0 auto;
@@ -140,8 +140,10 @@ body {
     background-repeat: no-repeat;
     background-image: url(../images/FooterBackground.png);
     background-size: cover;
+    min-width: 1300px;
     /*height: 210px;*/
     margin: 0 auto;
+    
 }
 
 #footerMenu {
@@ -188,4 +190,40 @@ body {
 }
 #author {
     color: #FFF;
+}
+
+@media (max-width: 1200px) {
+    #menu {
+        width: 550px;    
+        height: 112px;
+        margin-left: 50px;
+        float: left;
+    }
+    
+    .loginButton{
+        width: 140px;
+    }
+
+    #menu ul li a div{
+        font-size: 18px;
+        width: 160px;
+    }
+}
+
+@media (max-width: 767px) {
+    #menu {
+        width: 470px;    
+        height: 112px;
+        margin-left: 100px;
+        float: left;
+    }
+    
+    .loginButton{
+        width: 140px;
+    }
+
+    #menu ul li a div{
+        font-size: 18px;
+        width: 131px;
+    }
 }
