--- a/FamilyTree.WebUI/wwwroot/css/PersonDataStyle.css
+++ b/FamilyTree.WebUI/wwwroot/css/PersonDataStyle.css
@@ -1,6 +1,6 @@
 ﻿/* Временна убрана кнопка */
-input[type="date"]::-webkit-calendar-picker-indicator {
-    display: none;
+input[type='date']::-webkit-calendar-picker-indicator {
+  display: none;
 }
 
 #person-data-block,
