--- a/FamilyTree.WebUI/Views/Shared/_Layout.cshtml
+++ b/FamilyTree.WebUI/Views/Shared/_Layout.cshtml
@@ -5,10 +5,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" type="text/css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.0.0/css/bootstrap.min.css" type="text/css" rel="stylesheet" />
     <link href="~/css/LayoutStyle.css" type="text/css" rel="stylesheet">
     <link href="~/css/ButtonStyle.css" type="text/css" rel="stylesheet">
-    <link href="~/lib/font-awesome/css/all.css" type="text/css" rel="stylesheet">
     @RenderSection("Styles", false)
     <title>@ViewBag.Title</title>
 </head>
