--- a/FamilyTree.WebUI/Views/FamilyTree/Index.cshtml
+++ b/FamilyTree.WebUI/Views/FamilyTree/Index.cshtml
@@ -16,13 +16,13 @@
 @section Scripts
 {
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.0.0/js/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/microsoft-signalr/3.1.14/signalr.min.js"></script>
     <script src="~/js/SliderGenDrevo.js"></script>
     <script src="~/js/LoadTree.js"></script>
     <script src="~/lib/sortable/Sortable.js"></script>
     <script src="~/js/PersonData.js"></script>
     <script src="~/js/Privacy.js"></script>
     <script src="~/lib/slick/slick.min.js"></script>
-    <script src="~/lib/signalr/signalr.min.js"></script>
 }
 
 @section HeaderText
