--- a/FamilyTree.WebUI/Views/FamilyTree/Index.cshtml
+++ b/FamilyTree.WebUI/Views/FamilyTree/Index.cshtml
@@ -18,9 +18,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.0.0/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/microsoft-signalr/3.1.14/signalr.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Sortable/1.13.0/Sortable.min.js"></script>
     <script src="~/js/SliderGenDrevo.js"></script>
     <script src="~/js/LoadTree.js"></script>
-    <script src="~/lib/sortable/Sortable.js"></script>
     <script src="~/js/PersonData.js"></script>
     <script src="~/js/Privacy.js"></script>
 }
