refactor: the `images` folder has been moved to the `assets` folder

--- a/FamilyTree.WebUI/Views/FamilyTree/Index.cshtml
+++ b/FamilyTree.WebUI/Views/FamilyTree/Index.cshtml
@@ -111,7 +111,7 @@
 </div>
 
 <div id="start-tree-block">
-    <img src="~/images/addBlack.png" id="imgAdd" />
+    <img src="~/assets/images/addBlack.png" id="imgAdd" />
 </div>
 
 <div id="main-tree-block">
@@ -132,7 +132,7 @@
         <div>
             <div id="blood-grandOne" class="person grand" data-value="">
                 <div class="imgBlock">
-                    <img src="~/images/person.png" class="imgPerson" />
+                    <img src="~/assets/images/person.png" class="imgPerson" />
                 </div>
                 <div>
                     <div class="surname"></div>
@@ -146,7 +146,7 @@
             </div>
             <div id="blood-grandTwo" class="person grand" data-value="">
                 <div class="imgBlock">
-                    <img src="~/images/person.png" class="imgPerson" />
+                    <img src="~/assets/images/person.png" class="imgPerson" />
                 </div>
                 <div>
                     <div class="surname"></div>
@@ -160,7 +160,7 @@
             </div>
             <div id="blood-grandThree" class="person grand" data-value="">
                 <div class="imgBlock">
-                    <img src="~/images/person.png" class="imgPerson" />
+                    <img src="~/assets/images/person.png" class="imgPerson" />
                 </div>
                 <div>
                     <div class="surname"></div>
@@ -174,7 +174,7 @@
             </div>
             <div id="blood-grandFour" class="person grand" data-value="">
                 <div class="imgBlock">
-                    <img src="~/images/person.png" class="imgPerson" />
+                    <img src="~/assets/images/person.png" class="imgPerson" />
                 </div>
                 <div>
                     <div class="surname"></div>
@@ -188,7 +188,7 @@
             </div>
             <div id="grandOne" class="person grand" data-value="">
                 <div class="imgBlock">
-                    <img src="~/images/person.png" class="imgPerson" />
+                    <img src="~/assets/images/person.png" class="imgPerson" />
                 </div>
                 <div>
                     <div class="surname"></div>
@@ -202,7 +202,7 @@
             </div>
             <div id="grandTwo" class="person grand" data-value="">
                 <div class="imgBlock">
-                    <img src="~/images/person.png" class="imgPerson" />
+                    <img src="~/assets/images/person.png" class="imgPerson" />
                 </div>
                 <div>
                     <div class="surname"></div>
@@ -216,7 +216,7 @@
             </div>
             <div id="grandThree" class="person grand" data-value="">
                 <div class="imgBlock">
-                    <img src="~/images/person.png" class="imgPerson" />
+                    <img src="~/assets/images/person.png" class="imgPerson" />
                 </div>
                 <div>
                     <div class="surname"></div>
@@ -230,7 +230,7 @@
             </div>
             <div id="grandFour" class="person" data-value="">
                 <div class="imgBlock">
-                    <img src="~/images/person.png" class="imgPerson" />
+                    <img src="~/assets/images/person.png" class="imgPerson" />
                 </div>
                 <div>
                     <div class="surname"></div>
@@ -247,7 +247,7 @@
         <div>
             <div id="blood-parentOne" class="person" data-value="">
                 <div class="imgBlock">
-                    <img src="~/images/person.png" class="imgPerson" />
+                    <img src="~/assets/images/person.png" class="imgPerson" />
                 </div>
                 <div>
                     <div class="surname"></div>
@@ -261,7 +261,7 @@
             </div>
             <div id="blood-parentTwo" class="person" data-value="">
                 <div class="imgBlock">
-                    <img src="~/images/person.png" class="imgPerson" />
+                    <img src="~/assets/images/person.png" class="imgPerson" />
                 </div>
                 <div>
                     <div class="surname"></div>
@@ -275,7 +275,7 @@
             </div>
             <div id="parentOne" class="person" data-value="">
                 <div class="imgBlock">
-                    <img src="~/images/person.png" class="imgPerson" />
+                    <img src="~/assets/images/person.png" class="imgPerson" />
                 </div>
                 <div>
                     <div class="surname"></div>
@@ -289,7 +289,7 @@
             </div>
             <div id="parentTwo" class="person" data-value="">
                 <div class="imgBlock">
-                    <img src="~/images/person.png" class="imgPerson" />
+                    <img src="~/assets/images/person.png" class="imgPerson" />
                 </div>
                 <div>
                     <div class="surname"></div>
@@ -318,7 +318,7 @@
                         <li class="itemSlider itemAfter" style="left:220px;">
                             <div id="mainPerson" class="person idPopover" data-value="">
                                 <div class="imgBlock">
-                                    <img src="~/images/person.png" class="imgPerson" />
+                                    <img src="~/assets/images/person.png" class="imgPerson" />
                                 </div>
                                 <div>
                                     <div class="surname"></div>
@@ -339,12 +339,12 @@
                     </div>
                 </div>
                 <div id="blood-newBrother" class="AddPerson-Tree">
-                    <img src="~/images/addBlack.png" class="imgAdd-Tree" />
+                    <img src="~/assets/images/addBlack.png" class="imgAdd-Tree" />
                 </div>
             </div>
             <div id="wifes">
                 <div id="blood-newWife" class="AddPerson-Tree">
-                    <img src="~/images/addBlack.png" class="imgAdd-Tree" />
+                    <img src="~/assets/images/addBlack.png" class="imgAdd-Tree" />
                 </div>
                 <div class="PrevNext PrevItem">
                     <div>
@@ -359,7 +359,7 @@
                         <li class="itemSlider itemCurrent" style="left:0px;" data-value="5">
                             <div id="wifeOne" class="person" data-value="5">
                                 <div class="imgBlock">
-                                    <img src="~/images/person.png" class="imgPerson" />
+                                    <img src="~/assets/images/person.png" class="imgPerson" />
                                 </div>
                                 <div>
                                     <div class="surname"></div>
@@ -397,7 +397,7 @@
                         <li class="itemSlider itemCurrent" style="left:0px;">
                             <div id="sonOne" class="person" data-toggle="modal" data-target="#myModal" data-value="">
                                 <div class="imgBlock">
-                                    <img src="~/images/person.png" class="imgPerson" />
+                                    <img src="~/assets/images/person.png" class="imgPerson" />
                                 </div>
                                 <div>
                                     <div class="surname"></div>
@@ -418,12 +418,12 @@
                     </div>
                 </div>
                 <div id="blood-newSon" class="AddPerson-Tree">
-                    <img src="~/images/addBlack.png" class="imgAdd-Tree" />
+                    <img src="~/assets/images/addBlack.png" class="imgAdd-Tree" />
                 </div>
             </div>
             <div id="sonAnotherWife" class="person" data-toggle="modal" data-target="#myModal" data-value="">
                 <div class="imgBlock">
-                    <img src="~/images/person.png" class="imgPerson" />
+                    <img src="~/assets/images/person.png" class="imgPerson" />
                 </div>
                 <div>
                     <div class="surname"></div>
@@ -443,7 +443,7 @@
         <div>
             <div id="blood-parentOne-LittleTree" class="LittleTreePerson" data-toggle="modal" data-target="#myModal" data-value="5">
                 <div class="imgBlock">
-                    <img src="~/images/person.png" class="imgPerson" />
+                    <img src="~/assets/images/person.png" class="imgPerson" />
                 </div>
                 <div>
                     <div class="surname"></div>
@@ -457,7 +457,7 @@
             </div>
             <div id="blood-parentTwo-LittleTree" class="LittleTreePerson" data-toggle="modal" data-target="#myModal" data-value="5">
                 <div class="imgBlock">
-                    <img src="~/images/person.png" class="imgPerson" />
+                    <img src="~/assets/images/person.png" class="imgPerson" />
                 </div>
                 <div>
                     <div class="surname"></div>
@@ -474,7 +474,7 @@
         <div>
             <div id="brothers-LittleTree">
                 <div id="addBrother-LittleTree" class="AddPerson-LittleTree">
-                    <img src="~/images/addBlack.png" class="imgAdd-LittleTree" />
+                    <img src="~/assets/images/addBlack.png" class="imgAdd-LittleTree" />
                 </div>
                 <div id="prevBrothers" class="PrevNext PrevItem">
                     <div>
@@ -489,7 +489,7 @@
                         <li class="itemSlider itemAfter" style="left:230px;">
                             <div id="mainPerson-LittleTree" class="LittleTreePerson" data-toggle="modal" data-target="#myModal" data-value="5">
                                 <div class="imgBlock">
-                                    <img src="~/images/person.png" class="imgPerson" />
+                                    <img src="~/assets/images/person.png" class="imgPerson" />
                                 </div>
                                 <div>
                                     <div class="surname"></div>
@@ -524,7 +524,7 @@
                         <li class="itemSlider itemCurrent" style="left:0px;">
                             <div id="wifeOne-LittleTree" class="LittleTreePerson">
                                 <div class="imgBlock">
-                                    <img src="~/images/person.png" class="imgPerson" />
+                                    <img src="~/assets/images/person.png" class="imgPerson" />
                                 </div>
                                 <div>
                                     <div class="surname"></div>
@@ -545,7 +545,7 @@
                     </div>
                 </div>
                 <div id="addWife-LittleTree" class="AddPerson-LittleTree">
-                    <img src="~/images/addBlack.png" class="imgAdd-LittleTree" />
+                    <img src="~/assets/images/addBlack.png" class="imgAdd-LittleTree" />
                 </div>
             </div>
         </div>
@@ -565,7 +565,7 @@
                         <li class="itemSlider itemCurrent" style="left:0px;">
                             <div id="sonOne-LittleTree" class="LittleTreePerson" data-toggle="modal" data-target="#myModal" data-value="5">
                                 <div class="imgBlock">
-                                    <img src="~/images/person.png" class="imgPerson" />
+                                    <img src="~/assets/images/person.png" class="imgPerson" />
                                 </div>
                                 <div>
                                     <div class="surname"></div>
@@ -586,7 +586,7 @@
                     </div>
                 </div>
                 <div id="AddSon-LittleTree" class="AddPerson-LittleTree">
-                    <img src="~/images/addBlack.png" class="imgAdd-LittleTree" />
+                    <img src="~/assets/images/addBlack.png" class="imgAdd-LittleTree" />
                 </div>
             </div>
         </div>
