--- a/FamilyTree.WebUI/Views/Shared/_PersonContentModals.cshtml
+++ b/FamilyTree.WebUI/Views/Shared/_PersonContentModals.cshtml
@@ -459,7 +459,7 @@
                     <li class=" ">
                         <div id="" class="person idPopover" data-value="">
                             <div class="imgBlock">
-                                <img src="~/images/person.png" class="imgPerson" />
+                                <img src="~/assets/images/person.png" class="imgPerson" />
                             </div>
                             <div class="part-modal">
                                 @*@foreach (var item in ViewBag.Participants)
@@ -496,7 +496,7 @@
 <li class="itemSlider itemAfter" style="left:220px;">
     <div id="mainPerson" class="person idPopover" data-value="">
         <div class="imgBlock">
-            <img src="~/images/person.png" class="imgPerson" />
+            <img src="~/assets/images/person.png" class="imgPerson" />
         </div>
         <div>
             <div class="surname"></div>
